--- a/H_qq.ipynb
+++ b/H_qq.ipynb
@@ -839,16 +839,11 @@
       },
       "outputs": [],
       "source": [
-        "pid = tree['Particle.PDG'].array() # Ids of particles\n",
         "p_status = tree['Particle.generatorStatus'].array() # Generator status of particles. The generator status is 1 for stable particles.\n",
-        "charge = tree['Particle.charge'].array() # Charges of particles\n",
         "m = tree['Particle.mass'].array() # Masses of particles\n",
         "px = tree['Particle.momentum.x'].array() # X-momentum of particles\n",
         "py = tree['Particle.momentum.y'].array() # Y-momentum of particles\n",
-        "pz = tree['Particle.momentum.z'].array() # Z-momentum of particles\n",
-        "p_begin = tree['Particle.parents_begin'].array() # Indices of first parent\n",
-        "p_end = tree['Particle.parents_end'].array() # Indices of last parent\n",
-        "p_ind = tree['Particle#0.index'].array() # Indices of parents"
+        "pz = tree['Particle.momentum.z'].array() # Z-momentum of particles"
       ]
     },
     {
@@ -861,7 +856,7 @@
       "source": [
         "# Function to calculate energy\n",
         "def energy(m, px, py, pz):\n",
-        "    E = np.sqrt( m**2 + px**2 + py**2 + pz**2)\n",
+        "    E = np.sqrt(m**2 + px**2 + py**2 + pz**2)\n",
         "    return E"
       ]
     },
@@ -880,10 +875,10 @@
       "cell_type": "code",
       "source": [
         "def f(R) : # R is the radius parameter\n",
-        "  n_jets = [] # a list containing number of jets in each event\n",
-        "  dijet_m = []\n",
-        "  dijet_pt = [] # a list containing jets pT\n",
-        "  dijet_eta = [] # a list containing jets eta\n",
+        "  n_jets = [] # a list containing number of jets in dijet events\n",
+        "  dijet_m = [] # a list containing invariant mass of dijet\n",
+        "  dijet_pt = [] # a list containing pT of dijet\n",
+        "  dijet_eta = [] # a list containing eta of dijet\n",
         "\n",
         "  N = 10000 # number of events\n",
         "\n",
@@ -895,17 +890,13 @@
         "    p_y = py[n]\n",
         "    p_z = pz[n]\n",
         "    E = e[n]\n",
-        "    ids = pid[n]\n",
-        "    pinds = p_ind[n]\n",
-        "    pbegin = p_begin[n]\n",
-        "    pend = p_end[n]\n",
         "\n",
         "    for i in range(len(p_x)) : # looping over the particles in an event\n",
         "      part_p4 = PseudoJet(float(p_x[i]), float(p_y[i]), float(p_z[i]), float(E[i]))\n",
         "      part_p4.set_user_index(i) # setting the index of the particle\n",
         "      particles_list.append(part_p4)\n",
         "\n",
-        "    stable_p4 = []\n",
+        "    stable_p4 = [] # stable particles\n",
         "\n",
         "    for i in range(len(particles_list)) :\n",
         "      if sts[i] == 1 :\n",
@@ -1081,7 +1072,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyOBdpgGtgnsw7QWLjB2MEJR",
+      "authorship_tag": "ABX9TyMzSKnSFN3HeNlqmhjBlUns",
       "include_colab_link": true
     },
     "kernelspec": {
